--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,6 @@
 [project]
 name = "smallgenomeutilities"
-version = "0.3.9"
-#dynamic = ["version"]
+dynamic = ["version"]
 authors = [
     {name = "David Seifert", email = "david.seifert@bsse.ethz.ch"},
     {name = "Susana Posada Cespedes", email = "susana.posada@bsse.ethz.ch"},
@@ -75,6 +74,10 @@ script-files = [
     "scripts/remove_gaps_msa",
 ]
 
+[tool.setuptools_scm]
+write_to = "smallgenomeutilities/_version.py"
+fallback_version = "0.0.0"
+
 [build-system]
-requires = ["setuptools>=63"]
+requires = ["setuptools>=63", "setuptools_scm[toml]>=6.2"]
 build-backend = "setuptools.build_meta"
