--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,6 +72,7 @@ script-files = [
     "scripts/minority_freq",
     "scripts/pair_sequences",
     "scripts/predict_num_reads",
+    "scripts/prepare_primers",
     "scripts/remove_gaps_msa",
 ]
 
