--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -55,32 +55,32 @@ jobs:
         path: |
           dist
 
-  publish_testpypi:
-    name: Publish Python 🐍 distributions 📦 to TestPyPI
-    runs-on: ubuntu-latest
-
-    needs: build_dist
-
-    permissions:
-      # IMPORTANT: this permission is mandatory for trusted publishing
-      id-token: write
-
-    environment:
-      name: testpypi
-      url: https://test.pypi.org/p/smallgenomeutilities
-
-    steps:
-    - name: Fetch distributions 📦
-      uses: actions/download-artifact@v3
-      with:
-        name: dist
-        path: dist
-
-    - name: Publish distribution 📦 to Test PyPI
-      uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        repository-url: https://test.pypi.org/legacy/
-        skip-existing: true
+  # publish_testpypi:
+  #   name: Publish Python 🐍 distributions 📦 to TestPyPI
+  #   runs-on: ubuntu-latest
+  #
+  #   needs: build_dist
+  #
+  #   permissions:
+  #     # IMPORTANT: this permission is mandatory for trusted publishing
+  #     id-token: write
+  #
+  #   environment:
+  #     name: testpypi
+  #     url: https://test.pypi.org/p/smallgenomeutilities
+  #
+  #   steps:
+  #   - name: Fetch distributions 📦
+  #     uses: actions/download-artifact@v3
+  #     with:
+  #       name: dist
+  #       path: dist
+  #
+  #   - name: Publish distribution 📦 to Test PyPI
+  #     uses: pypa/gh-action-pypi-publish@release/v1
+  #     with:
+  #       repository-url: https://test.pypi.org/legacy/
+  #       skip-existing: true
 
   publish_pypi:
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
@@ -89,7 +89,7 @@ jobs:
 
     needs:
     - build_dist
-    - publish_testpypi
+    # - publish_testpypi
 
     permissions:
       # IMPORTANT: this permission is mandatory for trusted publishing
