--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -67,6 +67,14 @@ jobs:
         path: |
           dist
 
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        draft: true
+        files: |
+          dist/*
+
   # publish_testpypi:
   #   name: Publish Python 🐍 distributions 📦 to TestPyPI
   #   runs-on: ubuntu-latest
