--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest] #, macos-latest]
-        python-version: ["3.10"] #, "3.9"]
+        python-version: ["3.12"] #, "3.11"]
 
     runs-on: ${{ matrix.os }}
 
@@ -26,7 +26,7 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
             lfs: false
             # NOTE to save on bandwidth costs, GitHub Action will not use GitHub's own LFS
@@ -39,13 +39,13 @@ jobs:
           git lfs pull
           git lfs checkout
 
-      - uses: conda-incubator/setup-miniconda@v2
+      - uses: conda-incubator/setup-miniconda@v3
         with:
           miniforge-version: latest
-          miniforge-variant: Mambaforge
+          # miniforge-variant: Miniforge3
           python-version: ${{ matrix.python-version }}
           mamba-version: "*"
-          channels: conda-forge,bioconda #,defaults # see: https://github.com/conda-forge/status/issues/144
+          channels: conda-forge,bioconda
           channel-priority: strict
           activate-environment: testsmgu
           auto-update-conda: false
