--- a/tests/conda_testsgmu_env.yaml
+++ b/tests/conda_testsgmu_env.yaml
@@ -13,13 +13,14 @@ dependencies:
   # runtime
   - biopython
   - bcbio-gff
-  - pysam >=0.16
+  - pysam >=0.23
   - pysamstats
   - pandas
   - numpy
   - scipy
   - scikit-learn
   - matplotlib-base
+  - more-itertools
   - progress
   - pyyaml
   - mafft
