--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -24,6 +24,9 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
       with:
+        fetch-depth: ${{ startsWith(github.ref, 'refs/tags') && 1 || 20 }}
+        fetch-tags: true
+        # NOTE try to get most recent tag to keep setuptools_scm happy
         lfs: false
         # NOTE to save on bandwidth costs, GitHub Action will not use GitHub's own LFS
 
