--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -21,12 +21,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
+    - name: Checkout repository (with tags)
       uses: actions/checkout@v4
+      if: false == startsWith(github.ref, 'refs/tags/')
       with:
-        fetch-depth: ${{ startsWith(github.ref, 'refs/tags') && 1 || 20 }}
+        fetch-depth: 20
         fetch-tags: true
         # NOTE try to get most recent tag to keep setuptools_scm happy
+        lfs: false
+        # NOTE to save on bandwidth costs, GitHub Action will not use GitHub's own LFS
+
+    - name: Checkout repository (shallow)
+      uses: actions/checkout@v4
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
         lfs: false
         # NOTE to save on bandwidth costs, GitHub Action will not use GitHub's own LFS
 
