--- a/tests/test_aln2basecnt/mini.stats.yaml
+++ b/tests/test_aln2basecnt/mini.stats.yaml
@@ -2,13 +2,13 @@ mini:
   25%: 0.0
   50%: 0.0
   75%: 0.0
-  GC: 0.44048363560558684
+  GC: 0.43892233901418515
   count: 29903.0
-  insert_mean: 399.1304347826087
+  insert_mean: 373.4
   max: 12.0
-  mean: 0.3274587833996589
+  mean: 0.3343142828478748
   min: 0.0
-  readlen_mean: 212.8695652173913
-  reads: 46.0
-  std: 1.1584622422286674
+  readlen_mean: 199.94
+  reads: 50.0
+  std: 1.1644992320534493
 
