--- a/tests/test_aln2basecnt/mini_merged.stats.ini
+++ b/tests/test_aln2basecnt/mini_merged.stats.ini
@@ -1,14 +1,14 @@
 [mini_merged]
 count = 29903.0
-mean = 0.27893522389057956
-std = 0.9377380204841276
+mean = 0.28341637962746213
+std = 0.9410247585671061
 min = 0.0
 25% = 0.0
 50% = 0.0
 75% = 0.0
 max = 7.0
-reads = 23.0
-insert_mean = 399.1304347826087
-readlen_mean = 395.39130434782606
-gc = 0.4349310891572143
+reads = 25.0
+insert_mean = 373.4
+readlen_mean = 369.12
+gc = 0.4339373574942998
 
